# aus-housing-ml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_comparison.ipynb
scripts/: download_data.py  generate_report.py  train_models.py
src/api/: dependencies.py  main.py  middleware.py  schemas.py
src/api/routers/: health.py  predict.py
src/data/: config.py  downloaders.py  parsers.py  pipeline.py
src/features/: city_encoder.py  lag_features.py  macro_features.py  momentum_features.py  pipeline.py  seasonal_features.py
src/models/: base.py  ensemble.py  evaluator.py  lgbm_model.py  registry.py  ridge.py  trainer.py  xgboost_model.py
tests/: conftest.py
tests/api/: test_endpoints.py  test_error_handling.py  test_predict_raw.py
tests/data/: test_downloaders.py  test_parsers.py
tests/features/: test_lag_features.py  test_macro_features.py  test_momentum_features.py  test_pipeline_inference.py
tests/integration/: test_e2e_pipeline.py
tests/models/: test_ensemble.py  test_evaluator.py  test_trainer.py  test_walk_forward_cv.py
